2008-11-05 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-05
	* bugfix and new error summaries

2008-10-27 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-04
	* new simulation scheme and bugfixes


2008-10-23  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-03
        * Reduce cputime for CP monitoring by ~40%

2008-10-17  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-04-02
        * Distinguish between missing ROD fragment and no payload
        * in ROD monitoring.

2008-10-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-04-01
        * Add options to ignore bad TriggerTowers in comparison with
          simulation plots.

2008-10-08  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-04-00
        * Add new tool for ROD monitoring.
        * Needs TrigT1Calo-03-04-00 and TrigT1CaloByteStream-00-06-05

2008-09-24 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-22
	* new requirements for RecExCommon

2008-09-10  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-03-21
        * Fix to requirements for checkreq warning

2008-08-15 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-20
	* Inserting HitMaps

2008-08-15 Damien Prieur <damien.prieur@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-03-19
	* TrigT1CaloMonitoring_AthenaPT_topOptions.py & TrigT1CaloMonitoring_forRecExCommission.py:
	  replace ATLASCosmicFlags.doOnline with athenaCommonFlags.isOnline 
	  
2008-07-25 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* ATLASCosmicFlags -> rec, update AthenaPT
	* Tag as TrigT1CaloMonitoring-00-03-17

2008-06-12 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Timing issues of Ppms changed
	* Tag as TrigT1CaloMonitoring-00-03-16

2008-06-10 Andrea Neusiedl <andrea.neusiedl@cern.ch>