@@ -1,3 +1,9 @@
+2008-11-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-04-06
+        * Take account of Limited RoI Set bit in CP RoI comparison with simulation.
+        * Add separate EM/Tau RoI hitmaps.
+        * Update list of ignored Triggertowers for CP monitoring.
+
 2008-11-05 Andrea Neusiedl <andrea.neusiedl@cern.ch>
 	* Tag as TrigT1CaloMonitoring-00-04-05
 	* bugfix and new error summaries
